Dividing the main daraset into specific tailored datasets form ML and PowerBi

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c76e21df",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b4bfb745",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b56a2b40",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "max    89688.440000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b24ba250",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d432e8eb",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d373657a",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5f93e32c",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "(Timestamp('2023-10-04 00:00:00'), Timestamp('2025-10-03 00:00:00'))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bbde2dfc",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c08fa579",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "(np.int64(0), np.int64(0), np.int64(0))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5423e1c6",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bc41be7b",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bea73d0b",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
        "4999   69085.8   5785.85  Net Banking  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e4132d2d",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
        "(5000, 14)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "450a1de7",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "fb5337c0",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "5b731651",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "9b0d0607",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "968e4a89",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "4c13459f",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "4287dcf7",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "97c85396",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "id": "92d2aa6b",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "9359a80e",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "46ddfe6c",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13744\\3028234853.py:10: FutureWarning: \n",
+      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_14768\\3028234853.py:10: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "06a928e7",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "16b43846",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13744\\1768471392.py:9: FutureWarning: \n",
+      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_14768\\1768471392.py:9: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "653281b5",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "id": "c53b03a1",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "id": "d49525ab",
    "metadata": {},
    "outputs": [],
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "id": "544ee87c",
    "metadata": {},
    "outputs": [
@@ -1606,6 +1606,168 @@
    "source": [
     "df[['Sales', 'Sales_log']].hist(bins=50)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bcc113cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Order ID', 'Order Date', 'Customer Name', 'Region', 'City', 'Category',\n",
+       "       'Sub-Category', 'Product Name', 'Quantity', 'Unit Price', 'Discount',\n",
+       "       'Sales', 'Profit', 'Payment Mode', 'Year', 'Month', 'Month_Name',\n",
+       "       'Sales_log', 'Profit_log'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb93c0c",
+   "metadata": {},
+   "source": [
+    "# Preparing the Machene Learing DataSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "58d8d971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_df = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e7328ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_df[\"Year\"] = ml_df[\"Order Date\"].dt.year\n",
+    "ml_df[\"Month\"] = ml_df[\"Order Date\"].dt.month\n",
+    "ml_df[\"YearMonth\"] = ml_df[\"Order Date\"].dt.to_period('M').astype(str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "94694c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Order ID', 'Order Date', 'Customer Name', 'Region', 'City', 'Category',\n",
+       "       'Sub-Category', 'Product Name', 'Quantity', 'Unit Price', 'Discount',\n",
+       "       'Sales', 'Profit', 'Payment Mode', 'Year', 'Month', 'Month_Name',\n",
+       "       'Sales_log', 'Profit_log', 'YearMonth'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "18d50769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_df = ml_df.drop(columns=[\n",
+    "    'Order ID',\n",
+    "    'Customer Name',\n",
+    "    'Product Name',\n",
+    "    'Order Date',\n",
+    "    'Month_Name',\n",
+    "    'YearMonth',\n",
+    "    'Profit',\n",
+    "    'Profit_log'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e35f8201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_df.to_csv(\"ecommerce_ml.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aa93e50",
+   "metadata": {},
+   "source": [
+    "# Preparing the Dashboard (PowerBI) DataSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "72ede7ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powerbi_df  = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "44c8e0d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powerbi_df = powerbi_df.drop(columns=[\n",
+    "    'Customer Name',\n",
+    "    'Product Name',\n",
+    "    'Sales_log',\n",
+    "    'Profit_log'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c3a575dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powerbi_df['Profit_Margin'] = powerbi_df['Profit'] / powerbi_df['Sales']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "67f00a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powerbi_df.to_csv('powerbi_dataset.csv', index=False)"
    ]
   }
  ],
