Fillova krijimin e modeleve ML

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c76e21df",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b4bfb745",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b56a2b40",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "max    89688.440000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b24ba250",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d432e8eb",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d373657a",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5f93e32c",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "(Timestamp('2023-10-04 00:00:00'), Timestamp('2025-10-03 00:00:00'))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bbde2dfc",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c08fa579",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "(np.int64(0), np.int64(0), np.int64(0))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5423e1c6",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bc41be7b",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "bea73d0b",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
        "4999   69085.8   5785.85  Net Banking  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e4132d2d",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
        "(5000, 14)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "450a1de7",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fb5337c0",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5b731651",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9b0d0607",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "id": "968e4a89",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "4c13459f",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "id": "4287dcf7",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "id": "97c85396",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "id": "92d2aa6b",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "id": "9359a80e",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "id": "46ddfe6c",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13656\\3028234853.py:10: FutureWarning: \n",
+      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13188\\3028234853.py:10: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "06a928e7",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "id": "16b43846",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13656\\1768471392.py:9: FutureWarning: \n",
+      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13188\\1768471392.py:9: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "id": "653281b5",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "id": "c53b03a1",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "d49525ab",
    "metadata": {},
    "outputs": [],
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "544ee87c",
    "metadata": {},
    "outputs": [
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "id": "bcc113cd",
    "metadata": {},
    "outputs": [
@@ -1624,7 +1624,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 116,
    "id": "58d8d971",
    "metadata": {},
    "outputs": [],
@@ -1653,45 +1653,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "e7328ad4",
+   "execution_count": 117,
+   "id": "10046f95",
    "metadata": {},
    "outputs": [],
    "source": [
     "ml_df[\"Year\"] = ml_df[\"Order Date\"].dt.year\n",
     "ml_df[\"Month\"] = ml_df[\"Order Date\"].dt.month\n",
-    "ml_df[\"YearMonth\"] = ml_df[\"Order Date\"].dt.to_period('M').astype(str)\n"
+    "ml_df[\"YearMonth\"] = ml_df[\"Order Date\"].dt.to_period('M').astype(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "94694c7c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Order ID', 'Order Date', 'Customer Name', 'Region', 'City', 'Category',\n",
-       "       'Sub-Category', 'Product Name', 'Quantity', 'Unit Price', 'Discount',\n",
-       "       'Sales', 'Profit', 'Payment Mode', 'Year', 'Month', 'Month_Name',\n",
-       "       'Sales_log', 'Profit_log', 'YearMonth'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ml_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "18d50769",
+   "execution_count": 118,
+   "id": "aef79c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 119,
    "id": "e35f8201",
    "metadata": {},
    "outputs": [],
@@ -1727,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "id": "72ede7ca",
    "metadata": {},
    "outputs": [],
@@ -1737,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "id": "4024f133",
    "metadata": {},
    "outputs": [],
@@ -1747,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "id": "44c8e0d5",
    "metadata": {},
    "outputs": [],
@@ -1762,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "id": "c3a575dd",
    "metadata": {},
    "outputs": [],
@@ -1772,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "id": "67f00a3b",
    "metadata": {},
    "outputs": [],
