Finished the Random Forest Model for the prediction of  Numbers of Orders

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -167,7 +167,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
        "max    89688.440000  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
        "(Timestamp('2023-10-04 00:00:00'), Timestamp('2025-10-03 00:00:00'))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
        "(np.int64(0), np.int64(0), np.int64(0))"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
        "4   9050.04   Debit Card  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
        "4999   69085.8   5785.85  Net Banking  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
        "(5000, 14)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "968e4a89",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4c13459f",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "4287dcf7",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "97c85396",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "92d2aa6b",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "9359a80e",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "46ddfe6c",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13188\\3028234853.py:10: FutureWarning: \n",
+      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_7360\\3028234853.py:10: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "06a928e7",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "16b43846",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_13188\\1768471392.py:9: FutureWarning: \n",
+      "C:\\Users\\genti\\AppData\\Local\\Temp\\ipykernel_7360\\1768471392.py:9: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "653281b5",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "c53b03a1",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "d49525ab",
    "metadata": {},
    "outputs": [],
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "544ee87c",
    "metadata": {},
    "outputs": [
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "bcc113cd",
    "metadata": {},
    "outputs": [
@@ -1624,7 +1624,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,12 +1638,20 @@
    "id": "9eb93c0c",
    "metadata": {},
    "source": [
-    "# Preparing the Machene Learing DataSet"
+    "# Preparing the Machine Learning DataSet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfae8abe",
+   "metadata": {},
+   "source": [
+    "For Sales"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "58d8d971",
    "metadata": {},
    "outputs": [],
@@ -1653,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "10046f95",
    "metadata": {},
    "outputs": [],
@@ -1665,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "aef79c3c",
    "metadata": {},
    "outputs": [],
@@ -1684,12 +1692,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "e35f8201",
    "metadata": {},
    "outputs": [],
    "source": [
     "ml_df.to_csv(\"ecommerce_ml.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "007e6d92",
+   "metadata": {},
+   "source": [
+    "For Orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35362ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "659949ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Order ID                  int64\n",
+       "Order Date       datetime64[ns]\n",
+       "Customer Name            object\n",
+       "Region                   object\n",
+       "City                     object\n",
+       "Category                 object\n",
+       "Sub-Category             object\n",
+       "Product Name             object\n",
+       "Quantity                  int64\n",
+       "Unit Price                int64\n",
+       "Discount                  int64\n",
+       "Sales                   float64\n",
+       "Profit                  float64\n",
+       "Payment Mode             object\n",
+       "Year                      int32\n",
+       "Month                     int32\n",
+       "Month_Name               object\n",
+       "Sales_log               float64\n",
+       "Profit_log              float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9931bc51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   YearMonth  Number_of_Orders  Month  Year     Month_sin     Month_cos  \\\n",
+      "0 2023-12-01               195     12  2023 -2.449294e-16  1.000000e+00   \n",
+      "1 2024-01-01               222      1  2024  5.000000e-01  8.660254e-01   \n",
+      "2 2024-02-01               196      2  2024  8.660254e-01  5.000000e-01   \n",
+      "3 2024-03-01               199      3  2024  1.000000e+00  6.123234e-17   \n",
+      "4 2024-04-01               214      4  2024  8.660254e-01 -5.000000e-01   \n",
+      "\n",
+      "    Lag1   Lag2  \n",
+      "0  204.0  202.0  \n",
+      "1  195.0  204.0  \n",
+      "2  222.0  195.0  \n",
+      "3  196.0  222.0  \n",
+      "4  199.0  196.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "orders_monthly = df.groupby(\n",
+    "    df['Order Date'].dt.to_period('M')\n",
+    ").agg({\n",
+    "    'Order ID': 'count'\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Rename kolona\n",
+    "orders_monthly.rename(columns={'Order ID': 'Number_of_Orders'}, inplace=True)\n",
+    "\n",
+    "# Kthe period në datetime\n",
+    "orders_monthly['Order Date'] = orders_monthly['Order Date'].dt.to_timestamp()\n",
+    "\n",
+    "orders_monthly.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b332c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_orders_dataset.to_csv(\"ecommerce_orders_ml.csv\", index=False)"
    ]
   },
   {
@@ -1702,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "72ede7ca",
    "metadata": {},
    "outputs": [],
@@ -1712,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "4024f133",
    "metadata": {},
    "outputs": [],
@@ -1722,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "44c8e0d5",
    "metadata": {},
    "outputs": [],
@@ -1737,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "c3a575dd",
    "metadata": {},
    "outputs": [],
@@ -1747,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "67f00a3b",
    "metadata": {},
    "outputs": [],
